# otf2_merger

./: CMakeLists.txt  LICENSE  README.md  otf2_merger.clang-format
src/: CMakeLists.txt  config.cpp  definition_reader.cpp  definition_store.cpp  definition_writer.cpp  event_processor.cpp  main.cpp  maps.cpp
src/include/: config.h  definition_reader.h  definition_store.h  definition_writer.h  event_processor.h  maps.h
test/: CMakeLists.txt  testIOFileProps.cpp
